# hair-booking

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: CD.yml  CI.yml
src/: database.rs  layer.rs  main.rs  model.rs  router.rs  service.rs  utils.rs
src/model/: api_doc.rs  claim.rs  database.rs  db_error.rs  error.rs  response.rs
src/model/response/: response_message.rs
src/router/: admin.rs  customer.rs  general.rs  public.rs  salon_owner.rs  salon_user.rs
src/router/admin/: user.rs
src/router/customer/: reservation.rs
src/router/general/: account.rs
src/router/public/: account.rs  salon.rs  salon_bed.rs
src/router/salon_owner/: salon.rs  salon_bed.rs  salon_branch.rs  therapy.rs
src/service/: account.rs  reservation.rs  salon.rs  salon_bed.rs  user.rs
src/service/account/: customer_to_salon_user.rs  get_profile.rs  sign_in.rs  sign_up.rs  update_profile.rs
src/service/reservation/: all_user.rs
src/service/reservation/all_user/: cancel_reservation.rs  create_reservation.rs  list_reservation_history.rs
src/service/salon/: admin.rs  public.rs  salon_user.rs
src/service/salon/admin/: create_salon.rs  delete_salon.rs
src/service/salon/public/: list_salon.rs  salon_detail.rs
src/service/salon/salon_user/: create_salon.rs  create_salon_media.rs  delete_salon.rs  delete_salon_media.rs  list_salon.rs  update_salon.rs
src/service/salon_bed/: all_user.rs  public.rs  salon_user.rs
src/service/salon_bed/all_user/: list_available_salon_bed.rs  list_salon_bed.rs
src/service/salon_bed/public/: list_salon_bed.rs
src/service/user/: admin.rs
(+5 files in other folders)
