[package]
name = "hair-booking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["json"] }
axum-extra = {version = "0.9.3", features = ["typed-header", "cookie"]}
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde = "1.0.202"
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "time"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4"] }
